# Spintax

./: .travis.yml  LICENSE  README.md  Spintax.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Text/: Spintax.hs
src/Text/Spintax/: RandomPhrase.hs
