name:                Spintax
version:             0.3.7.0
synopsis:            Random text generation based on spintax
description:         Random text generation based on spintax with nested alternatives and empty options.
homepage:            https://github.com/MichelBoucey/spintax
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2016-2025 - Michel Boucey
category:            Text
build-type:          Simple
cabal-version:       >=1.10

Tested-With:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.1
   || ==9.12.1

library
  hs-source-dirs:    src/
  default-extensions: OverloadedStrings
  exposed-modules:   Text.Spintax
                   , Text.Spintax.RandomPhrase
  build-depends:     attoparsec   >= 0.12.1.6 && < 0.15
                   , base         >= 4.7 && < 5
                   , either       >= 5 && < 6
                   , extra        >= 1.4.3 && < 1.9
                   , mtl          >= 2.2.1 && < 2.4
                   , mwc-random   >= 0.13.3.2 && < 0.16
                   , text         >=1.1 && < 2.2
  default-language:  Haskell2010
  GHC-Options:       -Wall

source-repository head
  type:     git
  location: https://github.com/MichelBoucey/spintax

